# eagle-lang

./: .gitignore  Makefile.in  README.md  c-headers.c  concept.egl  configure  configure.ac  linequoter.py  makefile  msgs.py  options.txt  rc.c  rc.egl  test.h
examples/: any.egl  arithmetic-assignment.egl  array.egl  arraylist.egl  basic.egl  basic2.egl  bitwise.egl  casting.egl  class-init.egl  class-linked-list.egl  class-static.egl  class-weak-storage.egl  class.egl  clo-call.egl  clo-nested.egl  clo-new.egl  clo-recur.egl  clo-recurse.egl  clo-var.egl  clo-weak.egl  closure.egl  comments.egl  cond.egl  cond2.egl  condensed.egl  counted-manipulation.egl  cstring.egl  defer.egl  destruct.egl  enum.egl  factorial.egl  fibonacci.egl  gen.egl  gen2.egl  generic-func.egl  hashtable.egl  in.egl  interface.egl  interface_speed_test.egl  leak.egl  (+29 more)
examples/boggle/: Makefile  dictionary.egl  linkedlist.egl  main.egl  solver.egl  trie.egl
examples/imports/: class.egl  imp.egl  lib-class.egl  lib-static.egl  lib-struct.egl  lib.egl  static.egl
src/compiler/: ac_class.c  ac_class.h  ac_constants.c  ac_constants.h  ac_control_flow.c  ac_control_flow.h  ac_enum.c  ac_enum.h  ac_expressions.c  ac_expressions.h  ac_functions.c  ac_functions.h  ac_general.c  ac_general.h  ac_generator.c  ac_generator.h  ac_generics.c  ac_generics.h  ac_helpers.c  ac_helpers.h  ac_rc.c  ac_rc.h  ac_struct.c  ac_struct.h  ast.c  ast.h  ast_compiler.c  ast_compiler.h  ast_walk.c  ast_walk.h  variable_manager.c  variable_manager.h
src/core/: args.h  arguments.c  arguments.h  arraylist.c  arraylist.h  colors.h  config.c.in  config.h.in  hashtable.c  hashtable.h  llvm_headers.h  main.c  mempool.c  mempool.h  messages.c  messages.h  multibuffer.c  multibuffer.h  regex.c  regex.h  shipping.c  shipping.h  stringbuilder.c  stringbuilder.h  termargs.c  termargs.h  threading.c  threading.h  types.c  types.h  utils.c  utils.h  versioning.c  versioning.h
src/cpp/: cpp.cpp  cpp.h  dwarf.cpp  dwarf.h
src/environment/: exports.c  exports.h  imports.c  imports.h
src/grammar/: eagle.l  eagle.y  pipeline.c
src/htoegl/: arraylist.c  arraylist.h  hashtable.c  hashtable.h  main.c
